all qrcode setup done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Generator</title>
+    <title>Document</title>
 </head>
 <body>
-    <form action="/api/v1/qr" method="post">
-    Url: <input name="url"/>
-    <button type="submit">submit</button>
-    </form>
-
-    <% if (qrurl) { %>
-        <img src="<%- qrurl %>" alt="" srcset="">    
-    <%} %>
+    Hello I am QR Generator.
 </body>
 </html>
